feat: added get-heartbeat route and tests
