# src/heartbeat/models/heartbeatManager.ts
@@ -13,6 +13,15 @@ export interface IGetExpiredHeartbeatsRequest {
   duration: number;
 }
 
+export interface IGetHeartbeatRequest {
+  id: string;
+}
+
+export interface IgetHeartbeatResponse {
+  id: string;
+  lastHeartbeat: Date;
+}
+
 export type RemoveHeartbeatsRequest = string[];
 
 @injectable()
@@ -39,5 +48,11 @@ export class HeartbeatManager {
   public async removeHeartbeats(req: RemoveHeartbeatsRequest): Promise<number> {
     this.logger.info(`removing heartbeats: ${req.join()}`);
     return this.heartbeatRepository.removeHeartbeats(req);
+  }
+
+  @withSpanAsyncV4
+  public async GetHeartbeatById(req: IGetHeartbeatRequest): Promise<IgetHeartbeatResponse | null> {
+    this.logger.info(`retrieving heartbeat for id: ${req.id}`);
+    return this.heartbeatRepository.getHeartbeat(req.id);
   }
 }
